# go-confidant-client

./: BUILD  README.md  WORKSPACE  main.go
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
confidant/: BUILD.bazel  confidant.go  confidant_test.go  credential.go  credential_test.go  example_test.go  grants.go  grants_test.go  request.go  request_test.go  roles.go  roles_test.go  service.go  service_test.go  unixproxy.go
kmsauth/: BUILD.bazel  README.md  example_test.go  kmsauth.go  kmsauth_test.go
