load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["kmsauth.go"],
    importpath = "github.com/stripe/go-confidant-client/kmsauth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/kms:go_default_library",
        "@com_github_aws_aws_sdk_go//service/kms/kmsiface:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "example_test.go",
        "kmsauth_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_aws_aws_sdk_go//service/kms:go_default_library",
        "@com_github_aws_aws_sdk_go//service/kms/kmsiface:go_default_library",
    ],
)
